assets/css/style.css
/* ... */
/*Media Queryies for larger screens iPad and onward*/
@media screen and (min-width:768px) {
    /*starting with navigation*/
    nav{
        display: block;
        position: relative;
        padding: 10px;
    }

    #menubar{
        display: flex;
        justify-content: center;
        align-items: center;
    }
    #menubar li{
        align-self: center;
        padding: 1rem;
        margin-bottom: 0;
        font-size: 1.5rem;
        font-weight: bolder;
        letter-spacing: 3px;
    }
    .nav-menu-label{
        display: none;
    }

    /*Energy forms section*/
    #clean-energy-sources{
        width: 95%;
        height:500px;
        margin: 5px auto; 
     }

    .make-title-bolder{
        margin: 25px;
        font-size: 2.5rem;
    }

    .solar-en-circle,
    .wind-en-circle,
    .hydropower-en-circle{
        width: 33.33%;
        height: 100%;
        text-align: center;
        vertical-align: middle;
        padding:15px ;
        padding-top: 70px;
        border-radius: 50%;
        position: relative;
    }
    .solar-en-circle{
        background: url(../images/chelsea-wvusc5m.jpg) no-repeat center center/cover;
    }
    .wind-en-circle{
        background: url(../images/camila-fernandez-leon.jpg) no-repeat center center/cover;
    }
    
    .hydropower-en-circle{
        background: url(../images/collab-media.jpg) no-repeat center center/cover;
    }
    .source-title{
        font-size: 2rem;
    }
    .normal-txt,.sources-read-more-btn{
        font-size: 2rem;
    }
    .sources-read-more-btn{
        display: block;
        position: absolute;
        bottom: 25%;
        left: 50px;
        font-family: 'Gayathri', sans-serif;
    }

    /*Reasong and application fields*/
    #reasons-appliction-fields{
        margin-top: 5px;
        display: flex;
        flex-direction: row;
        justify-content: center;
        gap: 10px;
    }
    .reasons-and-applications{
        height: 250px;
    }

    /*Clean energy video section*/
    #green-enery-video {
        margin-top: 5px;
        height: 500px;
    }

    /* How it works section*/
    #solar-how-it-works{
        height: 600px;
    }
    .descriptioin-txt{
        font-size: 1.2em;
        padding: 5px 15px;
    }
    #wind-components-container,
    #hydro-components-container{
        display:flex;
        flex-direction: row;
        justify-content: center;
    }
    

    
    #solar-components-container{
        gap: 30px;
    }
    .photovoltaic-system,
    .thermal-system{
        font-size: 1.8rem;
    }
   table td{
        line-height: 1.6rem;
        font-size: 1.1rem;
    }

    /*join us*/
    #joinus{
        justify-content: center;
    }
  
}

@media screen and (min-width: 992px) {
    #menubar li{
        padding: 0.5rem 1.5rem;
    }
    li a{
        vertical-align: middle;
    }
    li a:hover{
        background-color: #fdc500;
    }
    #menubar > li:hover{
        background-color: #fdc500;
        border: 1px solid #00296b;
    }
    #clean-energy-sources{
        width: 95%;
        height:500px;
        margin: 5px auto; 
     }

    #home-pg-cover-txt{
        background-color: rgb(255,255,255, .7);
        text-align: center;
        width: 60%;
        /*all text inside this ID must be relative to the parent element and positoned center*/
        position: absolute;
        bottom: 25%;
        left: 20%;
    }

    /* Clean Energy sources*/
    .energy-sources {
        flex-direction: row;
    }

    .energy-sources .source-wrapper {
        width: 300px;
        height: 300px;
    }

    .source-title{
        font-size: 3.5rem;
        margin: 50px;
    }
    .normal-txt,.sources-read-more-btn{
        font-size: 2rem;
    }
    .read-more-btn{
        display: block;
    }
    #reasons-appliction-fields{
        margin-top: 25px;
    }

    /*Video about green energy*/
    #green-enery-video{
        height: 620px;
    }

    #green-enery-video div > iframe{
        border: 5px solid #fdc500;
        width: 992px;
        height: 530px;
    }

    #social-media-links i:hover{
        border-bottom: 1px solid #00296b;
    }
    .fa-square-instagram:hover{
        color: red;
    }
      /* How it works section*/
      #wind-how-it-works{
        height: 600px;
      }
    .descriptioin-txt{
        font-size: 1.3em;
    }
    
    
     /*System Components*/
     #solar-system-components{
        height: 775px;
    }
    #wind-system-components{
        height: 460px;
    }
    #hydro-system-components{
        height: 500px;
    }

    #solar-components-container{
        padding: 15px;
        flex-direction: row;
        gap: 45px;
    }
    #wind-components-container,
    #hydro-components-container{
        display:flex;
        flex-direction: row;
        justify-content: center;
    }
    .photovoltaic-system,
    .thermal-system{
        font-size: 1.8rem;
    }
   table td{
        line-height: 1.6rem;
        font-size: 1.1rem;
    }
     /*join us*/
    
    #joinus{
        background-repeat: no-repeat;
        background-position: 35%;
        position: relative;
        height: 650px;
    }

    #joinus-form{
        position: absolute;
        left: 65%;
    }
  
}

